--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,7 +152,15 @@ svg {
 .main {
   overflow: hidden; /* For animation ScrollReveal */
 }
-
+/* White Mode Styles */
+.white-mode {
+  --first-color: hsl(var(--hue), 70%, 50%); /* Change color variables as needed */
+  --title-color: #000;
+  --text-color: #333;
+  --body-color: #f5f5f5;
+  --container-color: #ffffff;
+  /* Add more styles for white mode as needed */
+}
 /*=============== HEADER & NAV ===============*/
 /* Default styles (Desktop) */
 .header {
