--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1033,13 +1033,11 @@ span{
   }
 }
 
-
-/* ScrollUp */
-#scrollTopButton{
-  background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
+#scrollTopButton {
+  background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
   text-decoration: none;
   border-radius: 50%;
-  display: block;
+  display: none; /* Initially hidden */
   height: 60px;
   width: 60px;
   position: fixed;
@@ -1047,6 +1045,7 @@ span{
   right: 30px;
   z-index: 99;
   cursor: pointer;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 #scrollTopButton::after {
@@ -1058,6 +1057,20 @@ span{
   text-align: center;
   padding-top: 5px;
 }
+
+.scroll-show {
+    display: block; /* Make visible */
+    transform: scale(1); /* Zoom in */
+    opacity: 1; /* Fully visible */
+}
+
+.scroll-hide {
+    transform: scale(0.7); /* Zoom out */
+    opacity: 0; /* Fade out */
+    pointer-events: none; /* Prevent interaction when hidden */
+}
+
+
 
 /* styles.css */
 
